feat(guest_key): introduce domain
